# labwork-4-c

./: CMakeLists.txt  main.cpp
console_parser_lib/: CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h
ham_arc_lib/: ArchiveManipulator.cpp  ArchiveManipulator.h  CMakeLists.txt  HamArc.cpp  HamArc.h  HamArcErrorChecker.cpp  HamArcErrorChecker.h  HammingEncoder.cpp  HammingEncoder.h
